Added triangle intersection, now trying to use thrust device vectors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CUDA_CXX_STANDARD 20)
 
 set(CMAKE_CXX_FLAGS "-O3 -funroll-loops -DNO_FREETYPE -D_GLIBCXX_ASSERTIONS -fasynchronous-unwind-tables -fexceptions -fpie -Wl,-pie -fstack-clash-protection -fstack-protector-all -fstack-protector-strong -g -grecord-gcc-switches -fcf-protection -pipe -Wall -Werror ")
 
+set(CMAKE_CUDA_FLAGS "-extended-lambda ")
+
 add_library(GLAD "libs/glad/glad.cu")
 
 
@@ -14,7 +16,7 @@ find_package(OpenGL REQUIRED)
 find_package(X11 REQUIRED)
 
 
-add_executable(Raytracing
+    add_executable(Raytracing
         main.cu
         src/utility/vector.h
         src/cuda_helpers.cu
@@ -25,8 +27,8 @@ add_executable(Raytracing
         src/utility/ray.h
         src/hittable.cu
         src/hittable.h
-        src/sphere.cu
-        src/sphere.h
+        src/shapes/sphere.cu
+        src/shapes/sphere.h
         src/hittableList.cu
         src/hittableList.h
         src/camera.cu
@@ -35,7 +37,11 @@ add_executable(Raytracing
         src/material.h
         src/constants.h
         src/utility/warp.h
-        src/utility/sampler.h)
+        src/utility/sampler.h
+        src/Acceleration/bvh.h
+        src/Acceleration/bvh.cu
+            src/shapes/triangle.cu
+        src/shapes/triangle.h)
 
 set_target_properties(Raytracing PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
