Added very simple denoising and adaptive sampling. Accessible feature buffers areavailable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ include_directories(${CMAKE_SOURCE_DIR}/includes)
 
 set(CMAKE_CXX_FLAGS "-O3 -fopenmp -funroll-loops -DNO_FREETYPE -D_GLIBCXX_ASSERTIONS -fasynchronous-unwind-tables -fexceptions -fpie -Wl,-pie -fstack-clash-protection -fstack-protector-all -fstack-protector-strong -g -grecord-gcc-switches -fcf-protection -pipe -Wall -Werror -Wextra ")
 
-set(CMAKE_CUDA_FLAGS "-extended-lambda -dopt=on -extra-device-vectorization --restrict --compiler-options -Wall")
+set(CMAKE_CUDA_FLAGS "-extended-lambda --expt-relaxed-constexpr -dopt=on -extra-device-vectorization --restrict --compiler-options -Wall")
 
 
 
