--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=602,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=1475,371
+Pos=1543,109
 Size=339,180
 Collapsed=0
 
@@ -19,7 +19,12 @@ Size=198,71
 Collapsed=0
 
 [Window][CUDA GPU Path Tracing]
-Pos=0,1
-Size=1474,1083
+Pos=-2,-1
+Size=1423,1081
+Collapsed=0
+
+[Window][Debug Info]
+Pos=1501,394
+Size=339,134
 Collapsed=0
 
